[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "dj-library-organizer"
version = "0.0.1"
dependencies = []
requires-python = ">=3.12"
authors = [
  {name = "Mathias Truel", email = "mathias.truel@proton.me"},
]
maintainers = [
  {name = "Mathias Truel", email = "mathias.truel@proton.me"},
]
description = "Simple library organizer for DJs"
readme = "README.md"
license = {file = "LICENSE"}
keywords = ["DJ", "library"]
classifiers = [
  "Development Status :: 3 - Alpha",
  "Programming Language :: Python",
  "Intended Audience :: End Users/Desktop",
]


[project.urls]
Repository = "https://github.com/mtruel/dj-library-organizer.git"
